--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </li>
             <li class="clients-list-items">
               
-                  <a  href="#"class="client-link">
+                  <a  href="#" class="client-link">
                     <svg class="clients-social-icon" width="104" height="56">
                       <use href="./images/icons.svg#icon-logo4"></use>
                     </svg>
@@ -398,7 +398,7 @@
                 </li>
                 <li class="team-social">
                   <a href="#" class="footer-social-link">
-                    <svg class="team-social-icon" width="24" height="24"">
+                    <svg class="team-social-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
@@ -413,8 +413,7 @@
               </ul>
             </div>          
       </div>
-    </footer>
-   
-    </div>
+    </footer>  
+    
   </body>
 </html>
