--- a/index.html
+++ b/index.html
@@ -414,6 +414,14 @@
             </div>          
       </div>
     </footer>  
-    
+    <div class="backdrop is-hidden"  data-modal>
+      <div class="modal">
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
